P vs P done successfully

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -33,7 +33,7 @@
     <div class="third-div">
       
       <div class="vs-cpu" onclick="showBoardCpu()"><span class="new-game">NEW GAME (VS CPU)</span> </div>
-      <div class="vs-player" onclick="showBoard()"><span class="new-game">NEW GAME (VS PLAYER)</span> </div>
+      <div class="vs-player"><span class="new-game">NEW GAME (VS PLAYER)</span> </div>
     </div>
   </div>
 
