vs AI done successfully

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -32,7 +32,7 @@
 
     <div class="third-div">
       
-      <div class="vs-cpu" onclick="showBoardCpu()"><span class="new-game">NEW GAME (VS CPU)</span> </div>
+      <div class="vs-cpu"><span class="new-game">NEW GAME (VS CPU)</span> </div>
       <div class="vs-player"><span class="new-game">NEW GAME (VS PLAYER)</span> </div>
     </div>
   </div>
@@ -63,7 +63,7 @@
     <tr>
       <td class="cell2 cgreen" id="21"> <div class="score-x score-write">X (P1)</div><div class="score-x-num numbers">0</div></td>
       <td class="cell2 cgrey" id="22"><div class="score-tie score-write">TIES</div><div class="score-tie-num numbers">0</div></td>
-      <td class="cell2 corange" id="23"><div class="score-0 score-write">O (P2)</div><div class="score-o-num numbers">0</div></td>
+      <td class="cell2 corange" id="23"><div class="score-o score-write">O (P2)</div><div class="score-o-num numbers">0</div></td>
     </tr>
   </table>
 
