--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="second-"> 
         <div class="pickPlayer"><p class="pick-player">PICK PLAYER 1'S MARK</p></div></div>
         <div class="player-xo">
-          <div class="first-x"><img src="./assets/xplay.svg" alt="Xplayer" class="xtimes"></div>
+          <div class="first-x"><img src="./assets/xplay.svg" alt="Xplayer" class="xtimes" ></div>
           <div class="first-o"><img src="./assets/oplay.svg" alt="Oplayer" class="oval"></div>
         </div>
         <div><p class="rememberX">REMEMBER : X GOES FIRST</p></div>
@@ -46,19 +46,19 @@
       <td class="firsttt" id="13"><div class="first-row3" ><img class ="redo" src="assets/redo.svg" alt=""></div> </td>
     </tr>
     <tr>
-      <td class="cell" id="0-0"></td>
-      <td class="cell" id="0-1"></td>
-      <td class="cell" id="0-2"></td>
+      <td class="cell" id="0"></td>
+      <td class="cell" id="1"></td>
+      <td class="cell" id="2"></td>
     </tr>
     <tr>
-      <td class="cell" id="1-0"></td>
-      <td class="cell" id="1-1"></td>
-      <td class="cell" id="1-2"></td>
+      <td class="cell" id="3"></td>
+      <td class="cell" id="4"></td>
+      <td class="cell" id="5"></td>
     </tr>
     <tr>
-      <td class="cell" id="2-0"></td>
-      <td class="cell" id="2-1"></td>
-      <td class="cell" id="2-2"></td>
+      <td class="cell" id="6"></td>
+      <td class="cell" id="7"></td>
+      <td class="cell" id="8"></td>
     </tr>
     <tr>
       <td class="cell2 cgreen" id="21"> <div class="score-x score-write">X (P1)</div><div class="score-x-num numbers">0</div></td>
@@ -69,8 +69,8 @@
 
   <div class="rectangle">  
     <div class="group-10">  
-      <p class="winnerP">Player 1 wins</p>
-      <h1 class="takes"><img src='./assets/icon-x.svg' alt="" class="pl-image">  <span class="takee">TAKES THE ROUND</span></h1>
+      <p class="winnerP"></p>
+      <h1 class="takes"></h1>
       <div class="group-25">
         <button class="quit">QUIT</button>
         <button class="next-round">NEXT ROUND</button>      
