Changes made to Computer vs Human

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
       <td class="cell" id="8"></td>
     </tr>
     <tr>
-      <td class="cell2 cgreen" id="21"> <div class="score-x score-write">X (P1)</div><div class="score-x-num numbers">0</div></td>
+      <td class="cell2 cgreen" id="21"> <div class="score-x score-write"></div><div class="score-x-num numbers">0</div></td>
       <td class="cell2 cgrey" id="22"><div class="score-tie score-write">TIES</div><div class="score-tie-num numbers">0</div></td>
-      <td class="cell2 corange" id="23"><div class="score-o score-write">O (P2)</div><div class="score-o-num numbers">0</div></td>
+      <td class="cell2 corange" id="23"><div class="score-o score-write"></div><div class="score-o-num numbers">0</div></td>
     </tr>
   </table>
 
