Quiting the Game and Starting at fresh

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
    <!-- CREATING THE BOARD FOR THE GAME -->
 
-  <table id="table">
+  <table id="table" class="reset-table">
     <tr>
       <td class="first-row1" id="11"><img src="./assets/logo.svg" alt="logo"></td>
       <td class="first-row2" id="12"></td>
