Review changes has been made

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
    <!-- CREATING THE BOARD FOR THE GAME -->
 
   <table id="table" class="reset-table">
-    <tr>
+    <tr class ="game-title-bar">
       <td class="first-row1" id="11"><img src="./assets/logo.svg" alt="logo"></td>
       <td class="first-row2" id="12"></td>
       <td class="firsttt" id="13"><div class="first-row3" ><img class ="redo" src="assets/redo.svg" alt=""></div> </td>
