Mobile view resolved

--- a/index.html
+++ b/index.html
@@ -41,24 +41,24 @@
 
   <table id="table" class="reset-table">
     <tr class ="game-title-bar">
-      <td class="first-row1" id="11"><img src="./assets/logo.svg" alt="logo"></td>
+      <td class="first-row1" id="11"><div class="xo-logo"><img src="./assets/logo.svg" alt="logo"></div></td>
       <td class="first-row2" id="12"></td>
-      <td class="firsttt" id="13"><div class="first-row3" ><img class ="redo" src="assets/redo.svg" alt=""></div> </td>
+      <td class="firsttt" id="13"><div class="make-cell"><div class="first-row3" ><img class ="redo" src="assets/redo.svg" alt=""></div> </div></td>
     </tr>
     <tr>
-      <td class="cell" id="0"></td>
-      <td class="cell" id="1"></td>
-      <td class="cell" id="2"></td>
+      <td class="cell center" id="0"></td>
+      <td class="cell center" id="1"></td>
+      <td class="cell center" id="2"></td>
     </tr>
     <tr>
-      <td class="cell" id="3"></td>
-      <td class="cell" id="4"></td>
-      <td class="cell" id="5"></td>
+      <td class="cell center" id="3"></td>
+      <td class="cell center" id="4"></td>
+      <td class="cell center" id="5"></td>
     </tr>
     <tr>
-      <td class="cell" id="6"></td>
-      <td class="cell" id="7"></td>
-      <td class="cell" id="8"></td>
+      <td class="cell center" id="6"></td>
+      <td class="cell center" id="7"></td>
+      <td class="cell center" id="8"></td>
     </tr>
     <tr>
       <td class="cell2 cgreen" id="21"> <div class="score-x score-write"></div><div class="score-x-num numbers">0</div></td>
